tried adding position: relative, height: 100% fix for safari ios (to enable overflow hidden) https://stackoverflow.com/questions/3047337/does-overflowhidden-applied-to-body-work-on-iphone-safari

--- a/src/searchMap/css/searchMap.css
+++ b/src/searchMap/css/searchMap.css
@@ -7,6 +7,12 @@ body {
 	overscroll-behavior-y: none;
 }
 
+html,
+body {
+    position: relative;
+    height: 100%;
+}
+
 
 :root {
 
